--- a/2D-Golf/.gitpod.yml
+++ b/2D-Golf/.gitpod.yml
@@ -7,5 +7,5 @@ ports:
   - port: 6080
     onOpen: open-preview
 tasks:
-    - init: /usr/bin/python3 main.py
-      command: /usr/bin/python3 main.py
+    - init: /usr/bin/python3 menue_main.py
+      command: /usr/bin/python3 menue_main.py
