--- a/Tetris/.gitpod.yml
+++ b/Tetris/.gitpod.yml
@@ -6,4 +6,4 @@ ports:
     onOpen: open-preview
 tasks:
   - init: pip3 install -r requirements.txt
-    command: python3 main.py
+    command: python3 menue_main.py
